syntax = "proto3";

option csharp_namespace = "HelloWorld";

import "google/api/annotations.proto";

package helloworld;

message Request {
	string content=1;
}

message Response {
	string message=1;
}

service HelloServiceDefinition {
	rpc Token(Request) returns (Response);
	rpc Unary(Request) returns (Response){
		option (google.api.http) = {
			get: "/v1/Unary/{content}"
		};
	}
	rpc ClientStream(stream Request) returns (Response);
	rpc ServerStream(Request) returns (stream Response);
	rpc BiDirectionalStream(stream Request) returns (stream Response);
}